about us gap fixed

--- a/src/styles/blocks/about-us.scss
+++ b/src/styles/blocks/about-us.scss
@@ -14,7 +14,7 @@
     @include on-tablet {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
-      grid-row-gap: 24px;
+      grid-column-gap: 24px;
     }
   }
 
@@ -41,6 +41,10 @@
 
   &__data {
     margin-bottom: 48px;
+
+    @include on-tablet {
+      margin-bottom: 80px;
+    }
 
     &__number {
       font-size: 96px;
